--- a/mavenproject1/ProjetoPrimafacesMaven/pom.xml
+++ b/mavenproject1/ProjetoPrimafacesMaven/pom.xml
@@ -12,10 +12,50 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- Logging -->
+        <slf4j.version>1.7.12</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+		
+        <!-- JUnit -->
+        <junit.version>4.11</junit.version>
+		
+        <!-- Commons Fileupload -->
+        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+		
+        <!-- Commons Lang (utilidades) -->
+        <commons-lang3.version>3.4</commons-lang3.version>
+        <!-- Weld - Implementação do CDI -->
+        <weld.version>2.2.10.Final</weld.version>
+        <!-- Weld depende do Jandex -->
+        <jandex.version>1.2.3.Final</jandex.version>
     </properties>
     
     <dependencies>
         <!-- Mojarra (Implementação do JSF 2) -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -40,7 +80,7 @@
             <version>9.4.1208</version>
         </dependency>
         
-          <!-- Log4J -->    	
+        <!-- Log4J -->    	
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
